--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp": "^3.9.1",
     "html-webpack-plugin": "^2.30.1",
     "jsx-loader": "^0.13.2",
+    "material-ui": "^0.19.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^4.2.0",
