--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "gulp": "^3.9.1",
+    "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
     "jsx-loader": "^0.13.2",
     "material-ui": "^0.19.0",
