--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsx-loader": "^0.13.2",
     "material-ui": "^0.19.0",
     "react": "^15.6.1",
+    "react-avatar-editor": "^10.2.1",
     "react-dom": "^15.6.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
