--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "react": "^15.6.1",
     "react-avatar-editor": "^10.2.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "webpack-dev-server": "^2.7.1"
   },
   "devDependencies": {
