--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp": "^3.9.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
+    "immutable": "^3.8.1",
     "jsx-loader": "^0.13.2",
     "material-ui": "^0.19.0",
     "react": "^15.6.1",
@@ -48,6 +49,9 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "file-loader": "^0.11.2",
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "url-loader": "^0.5.9",
     "webpack": "^3.5.5"
   }
 }
