--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "material-ui": "^0.19.0",
     "react": "^15.6.1",
     "react-avatar-editor": "^10.2.1",
+    "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
