活动列表维护开发

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,7 @@
     "alert": true,
     "FileReader": true,
     "localStorage": true,
-    "fetch": true
+    "fetch": true,
+    "confirm": true
   }
 }
